// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Track/Track.tools.svelte: Default 1`] = `
<div>
  <div
    class="undefined root svelte-138dtrj"
  >
    <a
      class="svelte-138dtrj"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-1oz3k7v"
        height="256"
        loading="lazy"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-138dtrj"
    >
      <span
        class="title svelte-138dtrj"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
     
  </div>
</div>
`;

exports[`Toolshot components/Track/Track.tools.svelte: With details 1`] = `
<div>
  <div
    class="undefined root svelte-138dtrj"
  >
    <a
      class="svelte-138dtrj"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-1oz3k7v"
        height="256"
        loading="lazy"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-138dtrj"
    >
      <span
        class="title svelte-138dtrj"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
    <div
      class="duration svelte-138dtrj"
    >
      2:06
    </div>
     
  </div>
</div>
`;

exports[`Toolshot components/Track/Track.tools.svelte: With menu 1`] = `
<div>
  <div
    class="undefined root svelte-138dtrj"
  >
    <a
      class="svelte-138dtrj"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-1oz3k7v"
        height="256"
        loading="lazy"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-138dtrj"
    >
      <span
        class="title svelte-138dtrj"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
     
    <span
      aria-expanded="false"
      aria-haspopup="menu"
      class="wrapper svelte-1g0595r"
    >
      <button
        class="iconOnly noBorder svelte-11qpkf0"
      >
        <i
          class="material-icons svelte-11qpkf0"
        >
          more_vert
        </i>
         
         
        
         
      </button>
    </span>
     
    
  </div>
</div>
`;
